    - support for array variable declaration of form: "+mykey=value"
    - support for eval expressions on variables
    - support variable expansion in form: ${myvar} and ${myvar//match/replace}
    - support variable late expansion in form: ${{myvar}} and ${{myvar//match/replace}}
    - support logical expressions in form: $(( [[!]CONDITION:] EXPR0 || EXPR1 || ... ))
    - removed obsolete NAME_MATCH, MATCH_<var>, DIR_MATCH_<var> and SANITIZE_<var>
      hacks, this can now be solved with variable substitution and eval expressions
  - Gallery changes:
    - replaced GALLERY_IMAGE_<TYPE> declaration by GALLERY_IMAGE_TARGETS
    - replaced GALLERY_CONVERT_OPTIONS by GALLERY_IMAGE_CMD_JPG
    - replaced mobile_view variable by gallery_image_link, gallery_prevnext_bottom,
      gallery_prevnext_top and gallery_button_simple
    - added GALLERY_DISABLE_EXIF_WARNINGS
    - gallery templates: refactoring of gallery mosaic display (use
      display-block instead of tables): introduced new mosaic_* classes.
    - gallery templates: support for smartphones (two columns, fixed to
      50% width) and tablets (resized images, maximum height of 120px)
    - gallery templates: added mobile_view variable

* filewiki-current
  - added FileWiki::Plugin::Man, which processes man pages
  - added EXCLUDE system variable
  - changed default PLUGIN_MARKDOWN_MATCH=\.(md|txt)$
  - allow array vars for INCLUDE, EXCLUDE and PLUGIN variables (e.g. +INCLUDE=foo)
  - added SORT_STRATEGY=none (no sorting, useful when using INCLUDE)
  - added Template::Plugin::SwissTopo (swiss map plugin for Template Toolkit)
  - added support for blueimp gallery slideshow scripts (alternative to galleria)
  - added option "slideshow" for gallery_image_link variable
  - added variable gallery_popout, which displays a popout action link if set
  - added support for multiline variables (starting/ending with '\\\')
  - added resource-creator plugin framework
  - added plugin groups and constructor arguments