@@ -272,6 +272,12 @@ second example excludes any file or directory containing the word
 or directory ending with ".bak".
 
 
+### RESOURCES_FORCE_REBUILD
+
+If set, force a rebuild of all resources (i.e. all files generated by
+resource creator plugins), even if the resource files already exist.
+
+
 Preset Variables
 ----------------
 
